syntax = "proto3";
option csharp_namespace = "MineralInventory";

package client;
message MasterRequest
{

}
enum ResponseState {
  SUCCESS = 0;
  FAIL = 1;
}
message Response
{
    ResponseState state = 1;
    string message = 2;
}

message CodePacketInfo
{

    string codePacket = 1;
    string unit = 2;
    string nameProductPacket = 3;
    int32 idTypePacket =  4;
    string description = 5;
    bool isDeteted = 6;
    int32 id = 7;
    float weight = 8;
    string nameTypePacket = 9;

    
}
message CodePacketResponse
{
    Response response = 1;
    repeated CodePacketInfo data = 2;
}
message EquipmentInfo
{
    int32 idEquipment = 1;
    string nameEquipment = 2;
    int32 type = 3 ;
    string typeName = 4;
    bool isDeleted = 5;
   
}
message EquipmentResponse
{
    Response response = 1;
    repeated EquipmentInfo data = 2;
}
message PackingUnitInfo
{
    int32 idPackingUnit = 1;
    string namePackingUnit = 2;
    bool isDeleted = 3;
}
message PackingUnitResponse
{
    Response response = 1;
    repeated PackingUnitInfo data = 2;
}
message PartnerInfo
{
    int32 idPartner = 1;
    string namePartner = 2;
    int32 typePartner = 3;
    bool isDeleted = 4;
    string typePartnerName = 5;
    string codePartner = 6;
}

message PartnerResponse
{
    Response response = 1;
    repeated PartnerInfo data = 2;
}
message ProductInfo
{
    int32 idProduct = 1;
    string codeProduct = 2;
    string nameProduct = 3;
    bool isDeleted = 4;
}message ProductResponse
{
    Response response = 1;
    repeated ProductInfo data = 2;
}

message ReasonInfo
{
    int32 idReason = 1;
    string nameReason = 2;
    bool isDeleted = 3;
    string codeReason = 4;
}
message ReasonResponse
{
    Response response = 1;
    repeated ReasonInfo data = 2;
}
message TypeBillInfo
{
    int32 idTypeBill = 1;
    string nameTypeBill = 2;
    bool isDeleted = 3;
    string codeTypeBill = 4;
}
message TypeBillResponse
{
    Response response = 1;
    repeated TypeBillInfo data = 2;
}
message TypePacketInfo
{
    int32 idTypePacket = 1;
    //double weigth =2 ;
    string nameTypePacket = 3;
    bool isDeleted = 4;
}
message TypePacketResponse
{
    Response response = 1;
    repeated TypePacketInfo data = 2;
}
message TypeProductInfo
{
    int32 idTypeProduct = 1;
    string nameTypeProduct = 2;
    bool isDeleted = 3;
}
message TypeProductResponse
{
    Response response = 1;
    repeated TypeProductInfo data = 2;
}
message WareHouseInfo 
{
    int32 idWareHouse = 1;
  
    string nameWareHouse = 2;
    float capacity = 3;
    bool isDeleted = 4;
    string codeWareHouse = 5;
}
message WareHouseResponse
{
    Response response = 1;
    repeated WareHouseInfo  data = 2;
}
message WorkInfo
{
    int32 idWork = 1;
    string nameWork = 2;
    bool isDeleted = 3;
    string codeWork = 4;
}
message WorkResponse
{
    Response response = 1;
    repeated WorkInfo data = 2;
}